--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,11 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
-input[type="text"],input[type="password"],input[type="email"] {
+input[type="text"],input[type="password"],input[type="email"] ,
+textarea {
   @apply w-full border my-1 py-2 px-3 rounded-2xl;
 }
+
 button{
   @apply bg-gray-300;
 }
